# thrift-cpp-demo

./: .gitignore  CMakeLists.txt  CppClient.cpp  CppServer.cpp  README.md  shared.thrift  tutorial.thrift
gen-cpp/: Calculator.cpp  Calculator.h  SharedService.cpp  SharedService.h  shared_types.cpp  shared_types.h  tutorial_types.cpp  tutorial_types.h
